@@ -19,6 +19,7 @@ package org.apache.kafka.streams.errors;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.producer.ProducerRecord;
 import org.apache.kafka.common.Configurable;
+import org.apache.kafka.common.annotation.InterfaceAudience;
 import org.apache.kafka.streams.errors.internals.DefaultErrorHandlerContext;
 import org.apache.kafka.streams.processor.ProcessorContext;
 
@@ -29,6 +30,7 @@ import java.util.List;
  * Interface that specifies how an exception from source node deserialization
  * (e.g., reading from Kafka) should be handled.
  */
+@InterfaceAudience.Public
 public interface DeserializationExceptionHandler extends Configurable {
 
     /**
@@ -90,7 +92,7 @@ public interface DeserializationExceptionHandler extends Configurable {
      * @return a {@link Response} object
      */
     default Response handleError(final ErrorHandlerContext context, final ConsumerRecord<byte[], byte[]> record, final Exception exception) {
-        return new Response(Result.from(handle(context, record, exception)), Collections.emptyList());
+        return new Response(Result.from(handle(context, record, exception)), List.of());
     }
     /**
      * Enumeration that describes the response from the exception handler.
@@ -204,7 +206,7 @@ public interface DeserializationExceptionHandler extends Configurable {
          * @return a {@code Response} with a {@link DeserializationExceptionHandler.Result#FAIL} status.
          */
         public static Response fail() {
-            return fail(Collections.emptyList());
+            return fail(List.of());
         }
 
         /**
@@ -223,7 +225,7 @@ public interface DeserializationExceptionHandler extends Configurable {
          * @return a {@code Response} with a {@link DeserializationExceptionHandler.Result#RESUME} status.
          */
         public static Response resume() {
-            return resume(Collections.emptyList());
+            return resume(List.of());
         }
 
         /**
@@ -246,7 +248,7 @@ public interface DeserializationExceptionHandler extends Configurable {
          */
         public List<ProducerRecord<byte[], byte[]>> deadLetterQueueRecords() {
             if (deadLetterQueueRecords == null) {
-                return Collections.emptyList();
+                return List.of();
             }
             return Collections.unmodifiableList(deadLetterQueueRecords);
         }
